Fixed delivery truck not showing up

--- a/css/styles.css
+++ b/css/styles.css
@@ -50,7 +50,6 @@ a, i {
 }
 
 .main-logo {
-    display: none;
     margin-top: 30px;
     width: 150px;
 }
